Метод .of [#70623 #357556]